# words-are-hard-rs

./: Cargo.toml  rustfmt.toml
.github/workflows/: main.yaml
assets/: challenges.json
src/: bin.rs  challenge_instruction.rs  game.rs  gen.rs  lib.rs  main.rs  rule.rs  words.rs
words-are-hard/: Cargo.toml
words-are-hard/src/: challenge_instruction.rs  game.rs  gen.rs  lib.rs  rule.rs  words.rs
words-are-imgui/: Cargo.toml
words-are-imgui/src/: gui.rs  main.rs  words.rs
words-are-text/: Cargo.toml
words-are-text/src/: main.rs
