[package]
name = "words-are-imgui"
version = "0.1.0"
edition = "2021"
description = "A game about difficult words"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

words-are-hard = { path = "../words-are-hard" }
dauga = { path = "../../dauga" }

[package.metadata.bundle]
name = "words are hard"
identifier = "com.jjspira.words-are-hard"
copyright = "Copyright (c) Jonathan Spira 2021. All rights reserved."
short_description = "A game about hard words"
long_description = """
Watch out for those words, they'll get ya
"""
osx_minimum_system_version = "10.14"

